styles/layout.module.css
.container {
  min-height: 80vh;
  padding: 0 0.5rem;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.main {
  padding: 5rem 1rem;
  flex: 1;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.largeVector {
  max-width: 90%;
  max-height: 350px;
  object-fit: contain;
  text-align: center;
}

.smallVector {
  max-width: 70%;
  max-height: 200px;
  object-fit: contain;
  text-align: center;
}

.title {
  text-align: center;
}

.spaced {
  margin: 1rem;
}

.link {
  cursor: pointer;
}

@media (min-width: 1400px) {
  .grid {
    width: 1200px;
  }
}

.centerContainer {
  text-align: center;
}

.voteId {
  background: rgba(0, 0, 0, 0.08);
  border-radius: 10px;
  padding: 0.5rem;
  color: #6c5ce7;
  font-size: 1.5rem;
  font-weight: bold;
}

.fixedWidthDescription {
  max-width: 500px;
}

.candidatePicture {
  width: 200px;
  height: 200px;
  border-radius: 50%;
  object-fit: cover;
  margin-top: 2rem;
}

@media (min-width: 1000px) {
  .largePageBodyContainer {
    width: 800px;
  }
}

.deleteButton {
  margin: 1rem;
  border: solid 1px rgba(255, 0, 0, 0.7);
  color: rgba(255, 0, 0, 0.7);
}

.listItemPrimaryText {
  max-width: 230px;
}

.scrollableListContainer {
  max-width: 95vw;
  height: 300px;
  border: 1px solid grey;
  border-radius: 10px;
  margin-bottom: 1rem;
  padding: 0.5rem;
  text-align: center;
}

